--- a/.htaccess
+++ b/.htaccess
@@ -25,7 +25,9 @@ RewriteRule ^googlebase.xml$ index.php?route=feed/google_base [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_URI} !.*\.(ico|gif|jpg|jpeg|png|js|css)
-RewriteRule ^([^?]*) index.php?_route_=$1 [L,QSA]
+RewriteCond %{HTTP_HOST} ^www.squareofone.com$ [NC]
+#RewriteRule ^([^?]*) index.php?_route_=$1 [L,QSA]
+RewriteRule ^(.*)$ http://www.squareofone.com/$1 [R=301,L]
 
 ### Additional Settings that may need to be enabled for some servers 
 ### Uncomment the commands by removing the # sign in front of it.
